// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Form/Input _InputAutocompleteConDatiAccessibile 1`] = `
<div>
  <div
    class="select-wrapper mb-3"
  >
    <label
      for="autocomplete"
    >
      Provincia
    </label>
    <div
      class="autocomplete__wrapper"
    >
      <div
        style="border: 0px; height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          id="autocomplete__status--A"
          role="status"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          id="autocomplete__status--B"
          role="status"
        />
      </div>
      
      <input
        aria-activedescendant="false"
        aria-autocomplete="list"
        aria-describedby="autocomplete__assistiveHint"
        aria-expanded="false"
        aria-owns="autocomplete__listbox"
        autocomplete="off"
        class="autocomplete__input autocomplete__input--default"
        id="autocomplete"
        name="input-autocomplete"
        placeholder="Testo da cercare"
        role="combobox"
        type="text"
        value=""
      />
      <ul
        class="autocomplete__menu autocomplete__menu--inline autocomplete__menu--hidden"
        id="autocomplete__listbox"
        role="listbox"
      />
      <span
        id="autocomplete__assistiveHint"
        style="display: none;"
      >
        When autocomplete results are available use up and down arrows to review and enter to select.  Touch device users, explore by touch or with swipe gestures.
      </span>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input AreaDiTesto 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=" "
    >
      Esempio di area di testo
    </label>
    <textarea
      class=""
      rows="3"
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input AreaDiTestoConSegnaposto 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="active "
      for="example-textarea-placeholder"
    >
      Esempio di area di testo
    </label>
    <textarea
      aria-describedby="example-textarea-placeholderDescription"
      class=""
      id="example-textarea-placeholder"
      placeholder="Testo di esempio"
      rows="3"
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input Disabilitato 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=" "
      for="exampleDisabled"
    >
      Contenuto disabilitato
    </label>
    <input
      aria-describedby="exampleDisabledDescription"
      class="form-control"
      disabled=""
      id="exampleDisabled"
      type="text"
      value=""
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input EsempiDiCampiDiInput 1`] = `
<div>
  <div>
    <div
      class="form-group"
    >
      <label
        class=" "
        for="exampleInputText"
      >
        Campo di tipo testuale
      </label>
      <input
        aria-describedby="exampleInputTextDescription"
        class="form-control"
        id="exampleInputText"
        type="text"
        value=""
      />
      <div
        class="form-text"
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class=" "
        for="exampleInputEmail"
      >
        Campo di tipo email
      </label>
      <input
        aria-describedby="exampleInputEmailDescription"
        class="form-control"
        id="exampleInputEmail"
        type="email"
        value=""
      />
      <div
        class="form-text"
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class=" input-number-label"
        for="exampleInputNumber"
      >
        Campo di tipo numerico
      </label>
      <div
        class="input-group input-number"
      >
        <input
          aria-describedby="exampleInputNumberDescription"
          class="form-control"
          id="exampleInputNumber"
          type="number"
          value=""
        />
        <span
          class="input-group-text align-buttons flex-column"
        >
          <button
            class="input-number-add"
            type="button"
          >
            <span
              class="visually-hidden"
            />
          </button>
          <button
            class="input-number-sub"
            type="button"
          >
            <span
              class="visually-hidden"
            />
          </button>
        </span>
      </div>
      <div
        class="form-text"
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class=" "
        for="exampleInputTel"
      >
        Campo di tipo telefono
      </label>
      <input
        aria-describedby="exampleInputTelDescription"
        class="form-control"
        id="exampleInputTel"
        type="tel"
        value=""
      />
      <div
        class="form-text"
      />
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input InputConIconaOBottoni 1`] = `
<div>
  <div>
    <div
      class="form-group"
    >
      <div
        class="input-group"
      >
        <span
          class="input-group-text"
        >
          <svg
            aria-hidden="true"
            class="icon icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 3.5c-.5-.6-1.3-.9-2.1-.9s-1.6.3-2.2.9L4.6 15.2l-1 5.2 5.2-1L20.5 7.8c1.2-1.2 1.2-3.1 0-4.3zm-5.7 2.8.7-.7 2.9 2.9-.7.7-2.9-2.9zm-.7.8 1.1 1-8.4 8.4-1.1-1.1 8.4-8.3zM5.7 18.3c-.1-.2-.4-.3-.6-.3l.3-1.5 2.1 2.1-1.5.3c0-.2-.1-.5-.3-.6zm2.9 0-1.1-1.1 8.4-8.4 1 1.1-8.3 8.4zM19.8 7.1l-.7.7-2.9-2.9.7-.7c.4-.4.9-.6 1.5-.6.5 0 1 .2 1.4.6.8.8.8 2.1 0 2.9z"
            />
          </svg>
        </span>
        <label
          class=""
          for="input-group-1"
        >
          Con Etichetta
        </label>
        <input
          class="form-control"
          id="input-group-1"
          name="input-group-1"
          type="text"
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <div
        class="input-group"
      >
        <span
          class="input-group-text"
        >
          <svg
            aria-hidden="true"
            class="icon icon-danger icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 3.5c-.5-.6-1.3-.9-2.1-.9s-1.6.3-2.2.9L4.6 15.2l-1 5.2 5.2-1L20.5 7.8c1.2-1.2 1.2-3.1 0-4.3zm-5.7 2.8.7-.7 2.9 2.9-.7.7-2.9-2.9zm-.7.8 1.1 1-8.4 8.4-1.1-1.1 8.4-8.3zM5.7 18.3c-.1-.2-.4-.3-.6-.3l.3-1.5 2.1 2.1-1.5.3c0-.2-.1-.5-.3-.6zm2.9 0-1.1-1.1 8.4-8.4 1 1.1-8.3 8.4zM19.8 7.1l-.7.7-2.9-2.9.7-.7c.4-.4.9-.6 1.5-.6.5 0 1 .2 1.4.6.8.8.8 2.1 0 2.9z"
            />
          </svg>
        </span>
        <label
          class="active"
          for="input-group-2"
        >
          Con Etichetta e placeholder
        </label>
        <input
          class="form-control"
          id="input-group-2"
          name="input-group-2"
          placeholder="Lorem Ipsum"
          type="text"
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <div
        class="input-group"
      >
        <span
          class="input-group-text"
        >
          <svg
            aria-hidden="true"
            class="icon icon-primary icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 3.5c-.5-.6-1.3-.9-2.1-.9s-1.6.3-2.2.9L4.6 15.2l-1 5.2 5.2-1L20.5 7.8c1.2-1.2 1.2-3.1 0-4.3zm-5.7 2.8.7-.7 2.9 2.9-.7.7-2.9-2.9zm-.7.8 1.1 1-8.4 8.4-1.1-1.1 8.4-8.3zM5.7 18.3c-.1-.2-.4-.3-.6-.3l.3-1.5 2.1 2.1-1.5.3c0-.2-.1-.5-.3-.6zm2.9 0-1.1-1.1 8.4-8.4 1 1.1-8.3 8.4zM19.8 7.1l-.7.7-2.9-2.9.7-.7c.4-.4.9-.6 1.5-.6.5 0 1 .2 1.4.6.8.8.8 2.1 0 2.9z"
            />
          </svg>
        </span>
        <label
          class=""
          for="input-group-3"
        >
          Con Etichetta e bottone di tipo primary
        </label>
        <input
          class="form-control"
          id="input-group-3"
          name="input-group-3"
          type="text"
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btn-primary"
            id="button-3"
            type="button"
          >
            Invio
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input InputDatepicker 1`] = `
<div>
  <div
    class="active form-group"
  >
    <label
      class="active "
    >
      Datepicker
    </label>
    <input
      class="active form-control"
      placeholder="22/12/2023"
      type="date"
      value=""
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input InputHourpicker 1`] = `
<div>
  <div
    class="active form-group"
  >
    <label
      class="active "
    >
      Hourpicker
    </label>
    <input
      class="active form-control"
      type="time"
      value=""
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input InputPassword 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=" "
      for="exampleInputPassword"
    >
      Password con label, placeholder e testo di aiuto
    </label>
    <input
      aria-describedby="exampleInputPasswordDescription"
      class="form-control"
      id="exampleInputPassword"
      type="password"
      value=""
    />
    <span
      aria-hidden="true"
      class="password-icon"
    >
      <svg
        class="icon password-icon-visible icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.8 11.5C19 6.1 12.4 3.9 7 6.7c-2.1 1.1-3.7 2.7-4.8 4.8L2 12l.2.5c2.8 5.4 9.4 7.6 14.8 4.8 2.1-1.1 3.7-2.7 4.8-4.8l.2-.5-.2-.5zm-9.8 6c-3.8 0-7.2-2.1-8.9-5.5C4.8 8.6 8.2 6.5 12 6.5c3.8 0 7.2 2.1 8.9 5.5a9.88 9.88 0 0 1-8.9 5.5zM12 8c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0 7c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3c.1 1.6-1.2 2.9-2.8 3H12z"
        />
      </svg>
    </span>
    <small
      class="form-text"
      id="exampleInputPasswordDescription"
    >
      Inserisci almeno 8 caratteri e una lettera maiuscola
    </small>
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input Readonly 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=" "
      for="examplereadOnly"
    >
      Contenuto in sola lettura
    </label>
    <input
      aria-describedby="examplereadOnlyDescription"
      class="form-control"
      id="examplereadOnly"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input ReadonlyNormalizzato 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=" "
      for="exampleNormalized"
    >
      Contenuto in sola lettura
    </label>
    <input
      aria-describedby="exampleNormalizedDescription"
      class="form-control-plaintext"
      id="exampleNormalized"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="form-text"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Input UtilizzoDiPlaceholderELabel 1`] = `
<div>
  <div>
    <div
      class="form-group"
    >
      <label
        class=" "
        for="exampleLabel"
      >
        Etichetta di esempio
      </label>
      <input
        aria-describedby="exampleLabelDescription"
        class="form-control"
        id="exampleLabel"
        type="text"
        value=""
      />
      <div
        class="form-text"
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class="active "
        for="examplePlaceholder"
      >
        Etichetta di esempio
      </label>
      <input
        aria-describedby="examplePlaceholderDescription"
        class="form-control"
        id="examplePlaceholder"
        placeholder="Testo di esempio"
        type="text"
        value=""
      />
      <div
        class="form-text"
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class="active "
        for="exampleInfoText"
      >
        Etichetta di esempio
      </label>
      <input
        aria-describedby="exampleInfoTextDescription"
        class="form-control"
        id="exampleInfoText"
        placeholder="Testo di esempio"
        type="text"
        value=""
      />
      <small
        class="form-text"
        id="exampleInfoTextDescription"
      >
        Ulteriore testo informativo
      </small>
      <div
        class="form-text"
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class="active "
        for="examplevalidationText"
      >
        Etichetta di esempio
      </label>
      <input
        aria-describedby="examplevalidationTextDescription"
        class="is-invalid form-control"
        id="examplevalidationText"
        placeholder="Testo di esempio"
        type="text"
        value=""
      />
      <div
        class="invalid-feedback form-feedback just-validate-error-label form-text form-feedback just-validate-error-label"
      >
        Campo non valido
      </div>
    </div>
  </div>
</div>
`;
